[gd_scene load_steps=3 format=3 uid="uid://npe80afhhcqt"]

[ext_resource type="Script" path="res://Scenes/debris.gd" id="1_vqsgj"]

[sub_resource type="SphereShape3D" id="SphereShape3D_35113"]
radius = 0.08

[node name="Debris" type="Node3D"]
script = ExtResource("1_vqsgj")

[node name="Debris1" type="RigidBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Debris1"]
shape = SubResource("SphereShape3D_35113")

[node name="Debris2" type="RigidBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Debris2"]
shape = SubResource("SphereShape3D_35113")

[node name="Debris3" type="RigidBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Debris3"]
shape = SubResource("SphereShape3D_35113")

[node name="Debris4" type="RigidBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Debris4"]
shape = SubResource("SphereShape3D_35113")
